# CG

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeConfig.txt  CMakeLists.txt  README.md  run_tests.py  submit_helper.py
ext/: CMakeLists.txt  README.md
include/nori/: bitmap.h  bsdf.h  color.h  common.h  emitter.h  gui.h  interaction.h  medium.h  mesh.h  ray.h  shape.h  texture.h  warp.h
reports/homework-1/: index.html
reports/homework-2/: index.html
reports/homework-3/: index.html
reports/homework-4/: index.html
reports/project/: index.html
reports/project-proposal/: index.html
reports/rendering-competition/: preview-sihchen.pdf.txt
reports/resources/: jquery.twentytwenty.fix.js  jquery.twentytwenty.js
scenes/pa1/: ajax-material.xml  mesh-texture-material.xml  sphere-material.xml  test-checkerboard.xml  test-material.xml  test-pointlight.xml  test-sphere.xml
scenes/pa1/ref/: ajax-av-1024spp.exr  ajax-material.exr  ajax-normals.exr  mesh-texture-material.exr  mesh-texture.exr  sphere-analytic.exr  sphere-material.exr  sphere-mesh.exr  sphere-texture.exr  sponza-av-1024spp.exr  sponza-direct-4spp.exr
scenes/pa3/sphere/: sphere_pointlights_ems.xml
scenes/pa3/tests/: test-mesh-ems.xml  test-mesh-mats.xml  test-mesh-mis.xml  test-mesh.xml  test-pointlight.xml
scenes/pa3/veach_mi/: veach_ems.xml  veach_mats.xml  veach_mis.xml  veach_mis_weights.xml
scenes/pa4/cgltri/: cgltri_path_mats.xml  cgltri_path_mis.xml  cgltri_pmap.xml
scenes/pa4/tests/: test-direct-dielectric.xml  test-direct-mats.xml  test-direct-mis.xml  test-furnace-mats.xml  test-furnace-mis.xml  test-mirrors.xml  ttest-dielectric.xml
scenes/project/denoise/: cbox_path_albedo.exr  cbox_path_albedo.xml  cbox_path_mats.exr  cbox_path_mats.xml  cbox_path_mis.exr  cbox_path_mis.xml  cbox_path_normals.exr  cbox_path_normals.xml
scenes/project/disney/: chi2test-disney.xml  disney_5x10_nori.exr  disney_5x10_nori.xml  disney_clearcoat.blend  disney_clearcoat.blend1  disney_clearcoat_nori.exr  disney_clearcoat_nori.xml  disney_material_nori.exr  disney_material_nori.xml  disney_metallic.blend  disney_metallic.blend1  disney_metallic_nori.exr  disney_metallic_nori.xml  disney_nori.exr  disney_nori.xml  disney_roughness.blend  disney_roughness.blend1  disney_roughness_nori.exr  disney_roughness_nori.xml  disney_script.py  disney_sep.blend  disney_sep.blend1  disney_specular.blend  disney_specular.blend1  disney_specular_nori.exr  disney_specular_nori.xml  disney_subsurface.blend  disney_subsurface.blend1  disney_subsurface_nori.exr  disney_subsurface_nori.xml  material_ana_env_nori.exr  sphere_disney-anisotropic-00.xml  sphere_disney-anisotropic-01.xml  sphere_disney-anisotropic-02.xml  sphere_disney-anisotropic-03.xml  (+105 more)
src/: albedo.cpp  arealight.cpp  av.cpp  bitmap.cpp  checkerboard.cpp  chi2test.cpp  common.cpp  dielectric.cpp  diffuse.cpp  direct.cpp  direct_ems.cpp  direct_mats.cpp  direct_mis.cpp  gui.cpp  main.cpp  material.cpp  mesh.cpp  microfacet.cpp  mirror.cpp  normals.cpp  obj.cpp  path_mats.cpp  path_mis.cpp  photonmapper.cpp  pointlight.cpp  render.cpp  shape.cpp  sphere.cpp  ttest.cpp  uvtexture.cpp  warp.cpp  warptest.cpp
src/bsdf/: disney.cpp  disney_mitsuba.cpp  null.cpp
src/emitter/: envmaplight.cpp  spotlight.cpp
src/map/: normal_map.cpp  texture_map.cpp
src/medium/: homogeneous.cpp  medium.cpp  vol_path_mats.cpp  vol_path_mis.cpp
(+182 files in other folders)
